# pyFUNCellA

./: .gitignore  README.md  app.py  calculate_scores.py  calculate_scores.sh  escript.py  escript_aucell.py  filter_dataset.ipynb  plot_generation.ipynb  polyaxongit.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_docker_compatible_renv.R  streamlit_app.py  test_r_integration.py  thr.sh  visualization_example.ipynb
.github/workflows/: unittest.yml
.streamlit/: config.toml
app/: pas_tab.py  threshold_tab.py  upload_tab.py
app/utils/: streamlit_progress.py  visualize.py
docker/: deploy.dockerfile  development.dockerfile  profiling.dockerfile  streamlit.dockerfile  unittest.dockerfile
enrichment-auc/: _matlab_legacy.py  legend_handler.py  plot_dist_cat.py  plot_scatter.py  plot_scatter_cat.py
enrichment-auc/metrics/: cerno.py  gsva.py  rank.py  ratio.py  svd.py  vision.py
enrichment-auc/normalize/: freeman_tukey.py
enrichment_auc/: GMMdecomp.py  __init__.py  aucell_threshold.R  distributions.py  evaluate_classification.py  gene2path.py  thr_AUCell.py  thr_GMM.py  thr_KM.py  thresholds.py
enrichment_auc/gmm/: distributions.py  gaussian_mixture_hist.py  thresholds.py
enrichment_auc/metrics/: aucell.py  cerno.py  gsea.R  gsea.py  gsva.py  gsva_analysis.R  jasmine.py  mean.py  rank.py  ratio.py  ssgsea.py  svd.py  vae.py  vae_bn.py  vision.py  z.py
enrichment_auc/normalize/: freeman_tukey.py
enrichment_auc/plot/: legend_handler.py  plot_boxplots.py  plot_dist_cat.py  (+3 more)
gamred_native/: calculate_SW.c  calculate_SW.h  fetch_thresholds.c  fetch_thresholds.h  g_mix_est_fast_lik.c  gaussian_mixture_simple.c  main.c  main.h
notebooks/: datasets_characteristics.ipynb  estimate_classification.ipynb  filter_dataset.ipynb  filter_pas.ipynb  genesets_summary.ipynb  msc-plots.ipynb  pas-vae-eval.ipynb  plot_generation.ipynb
pyfuncella/: GMMdecomp.py  __init__.py  aucell_threshold.R  gene2path.py  gmm_decomposition.R  thr_AUCell.py  thr_GMM.py  thr_KM.py
scripts/: calculate_scores.py  calculate_scores.sh  escript.py  estimate_classif.py  estimate_classif.sh  plot_classif.py  small-vae.py  thr.sh  upregulate_vae.py  upregulate_vae.sh  vae-tf-gpu-msc.py  vae-tf-gpu.py  visualize_aucell.py  visualize_aucell.sh
source/: distributions.py  legend_handler.py  metrics.py  model.py  plot_dist_cat.py  plot_distributed_data.py  plot_scatter.py
test/: ft_test.py  gsva_test.py  pca_test.py  ratio_test.py  test_distributions.py  test_gmmdecomp.py  test_kmeans_search.py  test_matlab_legacy.py  test_thr_AUCell.py  test_thr_GMM.py  test_thresholds.py  vision_test.py
tests/: cerno_test.py  ft_test.py  gsva_test.py  metrics_test.py  pca_test.py  rank_test.py
(+45 files in other folders)
