[tool.poetry]
name = "enrichment_auc"
version = "0.1.0"
description = ""
authors = ["amrukwa <a.mrukwa00@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
setuptools = ">=68.0.0"
importlib-metadata = "^6.6.0"
numpy = ">=1.24.3,<2.0.0"
pandas = "^2.0.1"
scipy = "^1.8"
scikit-learn = "^1.2.2"
numpy-indexed = "^0.3.7"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
statsmodels = "^0.14.0"
matplotlib = "^3.7.1"
rpy2 = "3.5.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
parameterized = "^0.9.0"
black = "^23.3.0"
plotly = "^5.14.1"

[build-system]
requires = ["poetry-core>=1.0.0",
            "numpy>=1.24.3",
            "setuptools"]
build-backend = "poetry.core.masonry.api"
